# bbs-ap

./: .gitignore  Dockerfile  db.py  docker-compose.yml  migrate_db.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: db.py  main.py
app/cruds/: post.py  user.py
app/models/: model.py
app/routers/: auth.py  post.py  user.py
app/schemas/: auth.py  post.py  user.py
app/utils/: authentication.py  cryptography.py
db/: bbs.ddl
