[tool.poetry]
name = "bbs-ap"
version = "0.1.0"
description = ""
authors = ["meteorol50 <meteorol50.sky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = "^0.17.1"
SQLAlchemy = "<1.4"
aiomysql = "^0.0.22"
pydantic = {extras = ["email"], version = "^1.9.0"}
python-dotenv = "^0.19.2"
cryptography = "<3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
